--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@workpuls/electron-rpc",
-  "version": "0.1.0",
+  "name": "tmp-electron-rpc",
+  "version": "0.1.3",
   "description": "RPC wrapper for Electron",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "private": false,
   "scripts": {
     "prepublish": "npm run build",
@@ -23,8 +24,6 @@
     "uuid": "^3.3.2"
   },
   "files": [
-    "dist/index.js",
-    "dist/index.d.ts",
-    "dist/index.js.map"
+    "dist/*"
   ]
 }
