--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tmp-electron-rpc",
-  "version": "0.1.6",
+  "name": "@workpuls/electron-rpc",
+  "version": "0.2.0",
   "description": "RPC wrapper for Electron",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
