--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@workpuls/electron-rpc",
-  "version": "0.2.2",
+  "version": "0.2.6",
   "description": "RPC wrapper for Electron",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,6 +13,7 @@
   "author": "WorkPuls, Inc",
   "license": "MIT",
   "devDependencies": {
+    "@angular/core": "^8.1.1",
     "electron": "^5.0.6",
     "tslib": "^1.10.0",
     "tslint": "^5.18.0",
