--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
-    "rxjs": "~6.5.2",
+    "rxjs": "6.5.3",
     "uuid": "^3.3.2"
   },
   "files": [
