--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@workpuls/electron-rpc",
+  "name": "@insightfulio/electron-rpc",
   "version": "1.3.0",
   "description": "RPC wrapper for Electron",
   "main": "dist/index.js",
@@ -10,7 +10,7 @@
     "pretest": "npm run build",
     "build": "ttsc"
   },
-  "author": "WorkPuls, Inc",
+  "author": "Insightful.io, Inc",
   "license": "MIT",
   "devDependencies": {
     "@angular/core": "^13.1.1",
